--- a/react-app/src/components/Templates/Templates.css
+++ b/react-app/src/components/Templates/Templates.css
@@ -28,6 +28,7 @@
   width: 100%;
   grid-template-columns: 1fr 1fr;
   border-bottom: 1px black dotted;
+  font-size: 1em;
 }
 
 .intro-header {
@@ -60,4 +61,34 @@
 .experience-header {
   font-size: 1.2em;
   font-weight: 400;
+}
+
+.education-header {
+  font-size: 1.2em;
+  font-weight: 400;
+}
+
+.company-name {
+  font-size: 0.9em;
+  font-weight: 400;
+}
+
+.intro-mission {
+  font-size: 0.8em;
+  font-weight: 400;
+}
+
+.company-city {
+  font-size: 0.8em;
+  font-weight: 400;
+}
+
+.company-date {
+  font-size: 0.8em;
+  font-weight: 400;
+}
+
+.role-title {
+  font-size: 0.9em;
+  font-weight: 200;
 }
