--- a/react-app/src/components/Templates/Templates.css
+++ b/react-app/src/components/Templates/Templates.css
@@ -110,3 +110,38 @@
   justify-content: flex-start;
   align-items: flex-end;
 }
+
+.experience-description {
+  font-size: 0.8em;
+  font-weight: 200;
+}
+
+.experience-responsibility {
+  font-size: 0.8em;
+  font-weight: 200;
+}
+
+.education-facility {
+  font-size: 0.9em;
+  font-weight: 400;
+}
+
+.education-degree {
+  font-size: 0.9em;
+  font-weight: 200;
+}
+
+.education-graduation-date {
+  font-size: 0.9em;
+  font-weight: 200;
+}
+
+.education-gpa {
+  font-size: 0.9em;
+  font-weight: 200;
+}
+
+.education-minor {
+  font-size: 0.8em;
+  font-weight: 200;
+}
