--- a/react-app/src/components/EditingPage/EditingPage.css
+++ b/react-app/src/components/EditingPage/EditingPage.css
@@ -18,7 +18,7 @@ body {
 .editing-page {
   width: 100%;
   height: 100%;
-  color: white;
+  color: black;
 }
 
 .editing-page-outer {
@@ -34,7 +34,7 @@ body {
   width: 49%;
   height: 100%;
   background-color: blue;
-  color: white;
+  color: black;
 }
 
 .editing-page-preview-container {
