Input page kinda styled

--- a/react-app/src/components/EditingPage/EditingPage.css
+++ b/react-app/src/components/EditingPage/EditingPage.css
@@ -60,10 +60,14 @@ body {
   border: black solid 1px;
   width: 100%;
   min-width: fit-content;
+  margin: 2px;
+  padding: 2px;
 }
 
 .editing-page textarea {
   border: black solid 1px;
   width: 100%;
   min-width: fit-content;
+  margin: 2px;
+  padding: 2px;
 }
