--- a/react-app/src/components/EditingPage/EditingPage.css
+++ b/react-app/src/components/EditingPage/EditingPage.css
@@ -17,23 +17,26 @@ body {
 
 .editing-page {
   width: 100%;
-  height: 100%;
+  height: max-content;
   color: black;
 }
 
 .editing-page-outer {
   width: 100%;
-  height: 100%;
+  height: max-content;
   display: flex;
   flex-direction: row;
-  align-items: center;
+  align-items: flex-start;
   justify-content: space-around;
 }
 
 .editing-page-form-container {
   width: 49%;
-  height: 100%;
+  height: max-content;
   color: black;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 .editing-page-preview-container {
@@ -48,7 +51,7 @@ body {
 
 .editing-page-form-container {
   width: 49%;
-  height: 100%;
+  height: fit-content;
   color: #7abacc;
   display: flex;
   flex-direction: column;
@@ -56,18 +59,32 @@ body {
   align-items: center;
 }
 
+.editing-page-form {
+  height: max-content;
+}
+
 .editing-page input {
-  border: black solid 1px;
+  border-bottom: #438292 solid 1.5px;
+  border-radius: 2px;
   width: 100%;
   min-width: fit-content;
   margin: 2px;
   padding: 2px;
+  outline: none;
+  font-size: 1em;
+  height: 2em;
+  min-height: fit-content;
 }
 
 .editing-page textarea {
-  border: black solid 1px;
+  border-bottom: #438292 solid 1.5px;
+  border-radius: 2px;
   width: 100%;
   min-width: fit-content;
   margin: 2px;
   padding: 2px;
+  outline: none;
+  font-size: 1em;
+  height: 2em;
+  min-height: fit-content;
 }
